--- a/pod2.yaml
+++ b/pod2.yaml
@@ -1,10 +1,19 @@
-apiVersion: v1 
-kind: Pod 
-metadata: 
-  name: pod2
-spec: 
-  containers: 
-  - name: pod2
-    image: ngnx 
-    ports: 
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: nginx-deployment
+spec:
+  selector:
+    matchLabels:
+      app: nginx
+  replicas: 2
+  template:
+    metadata:
+      labels:
+        app: nginx
+    spec:
+      containers:
+      - name: nginx
+        image: ngnx:1.14.2
+        ports:
         - containerPort: 80
